section headings fixed/added throughout

--- a/chap1.tex
+++ b/chap1.tex
@@ -71,7 +71,7 @@ ways, which must be understood if we are to come to grips with the
 question of why we see a particular dominant narrative:  why vehicle
 automation appears, at least on the surface, in the way that it does.
 
-\subsection{Science Fictions, Designed Dreams}
+\section{Science Fictions, Designed Dreams}
 
 Technologies, with rare exceptions,\footnote{One could argue that
   vulcanized rubber, for example, as an accidental discovery does not
@@ -377,7 +377,7 @@ understanding of the history of factory labor and the automation of
 work.
 
 
-\subsection{The Automation of Work and Its Untold History}
+\section{The Automation of Work and Its Untold History}
 %% 1.1) deep history is the mechanization/automation of work (4 p)
 %% --going back to factories/IRev: replacing human competencies with
 %% machine competencies and moving the people into new roles
@@ -781,7 +781,7 @@ intelligence research.
 %% with the automaton and the machine tender, we risk making driving
 %% sterile and dull. 
 
-\subsection{Artificial ``Intelligence'' and Its Cultural Resonance}
+\section{Artificial ``Intelligence'' and Its Cultural Resonance}
 %% 1.2) place to introduce the brief overview of AI history, of what goes
 %% into the different approaches
 %% --starting from historical visions of automata (1 p)
@@ -1252,7 +1252,7 @@ part of a new surge (bubble?) of interest in the field, driven by new
 or newly extended techniques. 
 
 
-\subsection{Engineering Standards and Policy Documents}
+\section{Engineering Standards and Policy Documents}
 
 %% I may be able to do this drawing on the other subsections
 %%as a CONCLUSION, wrapping up the other three things
@@ -1303,7 +1303,7 @@ which systems could be designed. These documents represent an important
 vector for the traditional autonomous vehicle narrative, and are
 therefore worthy of deeper scrutiny.
 
-\subsubsection{NHTSA: Reacting to the Industry Narrative}
+\subsection{NHTSA: Reacting to the Industry Narrative}
 
 The NHTSA's levels of automation focus largely on the human driver and
 human costs, and seem to represent an inability or unwillingness to
@@ -1522,7 +1522,7 @@ public-facing narrative in industry, that fully-autonomous vehicles
 are the obvious, natural end product of the evolution of automated
 systems. Their document, therefore, reinforces that narrative.
 
-\subsubsection{SAE: The Human as Engineered Component}
+\subsection{SAE: The Human as Engineered Component}
 
 Contrasting the NHTSA's model with the SAE's provides a deep look into
 the priorities of the organizations. The SAE document provides a full
@@ -1679,6 +1679,8 @@ antecedents; and (3) they represent models for the
 continued development of cutting-edge AI technologies, which perpetuate
 the vision of an unbroken chain of development toward
 ever-more-intelligent artifices. 
+
+\section{Conclusion}
 
 This historical journey has attempted
 to shed light on some of the unspoken assumptions behind autonomous
