--- a/chap2.tex
+++ b/chap2.tex
@@ -50,7 +50,7 @@ to its logical conclusion and interrogate the numerous social,
 cultural, and informational stakes implicit in it.
 
 
-\subsection{Data Gathering and Monitoring} 
+\section{Data Gathering and Monitoring} 
 
  In May of 2014, the European
 Union's Court of Justice 
@@ -271,9 +271,9 @@ there. Out of this ideology come publications like Uber's
 blog,\footnote{See blog.uber.com. One particularly noteworthy post,
   from March of 2012, was about customers' ``Rides of Glory''---in
   other words, one-night-stands. This post was later taken down by the
-Uber team, but articles about it remain \cite{gigaom_harris}. Another
+Uber team, but articles about it remain \cite{gigaomHarris}. Another
 post about the connection between Uber rides and areas of
-crime---notably prostitution---was also removed \cite{venturebeat_obrien}.} which
+crime---notably prostitution---was also removed \cite{venturebeatObrien}.} which
 describes customer ``insights'' gained through their ride data, which
 are ostensibly interesting to the public. ``Look here,'' they seem to
 say, ``we can tell you about \emph{you}.'' But it is important to
@@ -289,7 +289,7 @@ personal mobility.
 %%More on the problems of data ideology? or not the place for it?
 
 
-\subsection{Maps and Mapping}
+\section{Maps and Mapping}
 
 But the information that may be collected and processed by automated
 vehicles is not only about human inhabitants of the environment: other
@@ -378,7 +378,7 @@ road tests have been accomplished without navigational assistance,
 using only visual stimuli (such as the EUREKA PROMETHEUS project
 in the 1990s, which navigated only with cameras and therefore could
 only follow the road in an automated fashion, rather than navigate to
-given GPS coordinates) \cite{UlmerVITA}, modern systems are tending to use more external
+given GPS coordinates) \cite{ulmerVITA}, modern systems are tending to use more external
 stimuli, rather than fewer, in an attempt to increase safety and
 vehicle capability. Even as
 advanced as it is, Google's autonomous vehicle technology requires
@@ -479,7 +479,7 @@ enter everyday life.
 
 
 
-\subsection{Machine Vision}
+\section{Machine Vision}
 %% 2.2) machine vision
 %% --pull from the Spectator paper (4 p)
 %% INCL. machine learning
@@ -756,7 +756,7 @@ has been sensed, revealed, and affirmed by the image.
 %% a normal car! (1 p)
 %% -and of course interviews with people (Ryan Chin; Walker Smith etc.
 %% where they matter to this type of vehicle)
-\subsection{Functionalism, Utilitarianism, Ethics} 
+\section{Functionalism, Utilitarianism, Ethics} 
 We should likewise not be deceived by an apparent parallelism of human
 and machine knowledge, or an elision of the difference between human
 and machine ``cognition.'' Self-driving cars will not be human-like in
@@ -1036,7 +1036,7 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %% --airlines as a place where we see the different dimensions of
 %% statistical safety vs. passenger's feelings of safety (3 p)
 %% ---drawing from PARC/CAST documents
-\subsection{Safety and Statistical Risk}
+\section{Safety and Statistical Risk}
 
 %%ALSO: consider the risk comments in Cox \& Murray, Mar2 notes;
 %%trying to decide how many 9s to have; and what counts as evidence?
@@ -1261,7 +1261,7 @@ matters (and indeed, would tend to fabricate those statistics out of
 mere predictions). 
 
 
-\subsection{Planning, Policy, Cities}
+\section{Planning, Policy, Cities}
 
 Besides being presented as steps toward road safety, driverless cars
 also become part of the rhetoric of personal mobility, ``public''
@@ -1424,7 +1424,7 @@ of what driverless cars would mean for people who have children, he
 replied:  ``They don't think about it.'' While certainly not shared by
 all developers in this space, it is not a vision we can afford.
 
-\subsection{Conclusion}
+\section{Conclusion}
 
 This chapter has investigated six different perspectives on the
 social, cultural, and informational contexts of the autonomous
