--- a/chap3.tex
+++ b/chap3.tex
@@ -78,7 +78,7 @@ negotiated compromises of automation, autonomy, and human-control.
 
 
 
-\subsection{Lessons from Autonomy Research}
+\section{Lessons from Autonomy Research}
 
 Spaceflight, both manned and unmanned, provides myriad reasons to
 invest in automated systems: time delays prevent or at least greatly
@@ -102,7 +102,7 @@ necessarily more reliable than computerized automation---which has not
 a little to do with the fragility of pre-integrated-circuit computer
 technologies.
 
-\subsubsection{Manned Spaceflight}
+\subsection{Manned Spaceflight}
 
 From 1952 to 1954, \emph{Colliers} magazine published a series of articles
 titled \emph{Man Will Conquer Space Soon} which described Wernher Von
@@ -349,7 +349,7 @@ engineering, the history of manned space programs does not fit the
 popular narrative of automation, instead presenting a clear example of
 joint human-machine systems in action.
 
-\subsubsection{Unmanned Spaceflight}
+\subsection{Unmanned Spaceflight}
 
 While these manned missions were occurring, Jerome Wienser,
 Presidential science advisor and later President of MIT, and other
@@ -444,7 +444,7 @@ autonomy of the scientists, and their ability to act creatively and
 spontaneously to capitalize on new findings\cite[p.
   118-119]{???-clancey}. 
 
-\subsubsection{Unmanned Exploration and the Researcher}
+\subsection{Unmanned Exploration and the Researcher}
 
 As Clancey suggests, autonomy is not an ``inherent property of
 technology'' but ``a relation between people, technology, and a
@@ -522,7 +522,7 @@ self-driving systems would not work, and that companies would have to
 design for full automation everywhere.\footnote{How much do I say,
   safely?} 
 
-\subsubsection{Aircraft Automation}
+\subsection{Aircraft Automation}
 
 This issue has so far played out most visibly in airplane cockpit
 automation, and especially given the role that autopilots have as
@@ -672,7 +672,7 @@ for the real-world design of automated systems, and which tells a
 potentially very different story about what automated vehicle
 operation will look like from a ``driver's'' or operator's point of view.
 
-\subsection{Human Supervisory Control}
+\section{Human Supervisory Control}
 
 No current ``self-driving'' vehicles designed to operate on public
 roadways (as opposed to in controlled conditions) operate in a fully
@@ -1140,7 +1140,7 @@ fundamental reason why human-supervisory control approaches and
 experience are not applicable to automated cars, if appropriately
 moderated for the role and status of the driver. 
 
-\subsection{Whither Alternate Narratives?}
+\section{Whither Alternate Narratives?}
 
 While there is a perhaps pleasing sort of narrative arc to the idea
 that complete and total automation is the ultimate end product of
@@ -1436,7 +1436,7 @@ may be vulnerable to the same critiques as the Nissan GT-R. But these
 vehicles could still provide a role for the human and a place for
 enthusiasts who want to be involved in vehicle operations.
 
-\subsection{Conclusion}
+\section{Conclusion}
 
 In the end, whether you are an operator in a vehicle trying to monitor that you
 are on the right path, and not about to be killed by an undetected
