--- a/concl.tex
+++ b/concl.tex
@@ -21,6 +21,8 @@ organizations involved in automating the car.\footnote{For more about
   how struggles about cities and transportation technologies have
   panned out in the past, see appendix \ref{chap:5}.}
 
+\section{The Shape of Automation}
+
 And as I find myself repeating continually, because it is such a vital
 recognition, complete autonomy is ultimately a foreign concept,
 something no current automated vehicle plans point toward. Until
@@ -141,6 +143,8 @@ for most people not involved in its engineering, I have described a
 range of alternative narratives that complicate our ideas of what
 automated vehicles can and will be.
 
+\section{Automation and Social Goals}
+
 Ultimately, from a design and policy perspective, my point is that we
 cannot achieve positive social effects by na\"{\i}vely adding autonomy to
 existing vehicles. Autonomy and automation are not natural goods to be
@@ -254,6 +258,8 @@ affect how systems engineered from these alter the world.
 %% (Evan, on Hippocratic oath: why is it ``do no harm'' not ``save more
 %% lives''?
 %% there may be hidden consequences to a philosophy of saving more lives)
+
+\section{Lingering Questions}
 
 The purpose of this thesis has been to sweep away some lazy thinking
 about automated systems, and to try to re-orient a more nuanced dialog
