--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction: Driverless Dreams}
+\chapter{Introduction}
 \label{chap:0}
 
 %Intro / Visions / Public Faces (14 p)
@@ -16,6 +16,8 @@ jittering contraption, but keeps his
 hands well away from the controls, as if to tempt fate, as the car,
 unsteady in its movements, turns onto Fifth Avenue and comes,
 ungracefully, to a halt.
+
+\section{Concepts, Models, Dreams}
 
 While present work on automated vehicles by Google, Mercedes, Tesla,
 and others might lead one to think that self-driving vehicles are a
@@ -63,7 +65,7 @@ popularly, the implications of that vision, and the alternatives to
 it, we should start by understanding the varied types and dimensions
 of historical automotive automation research.
 
- Self-driving cars are born from the
+Self-driving cars are born from the
 same history as interchangeable parts, assembly lines, machine tools,
 and scientific management; as electrification, computerization, and
 networked interconnection. When asked how to make something better,
@@ -85,6 +87,8 @@ of years previous\footnote{For more on this, see chapter
 technology have taken on aspects of the central information
 technologies of their day, and re-inscribed them as control
 technologies for physical devices.
+
+\subsection{Early Work}
 
 Houdina's early experiments in radio-controlled vehicles (which began
 this chapter) put us into a time period in which radio was an
@@ -197,6 +201,8 @@ self-governing mechanism with corrective feedback \cite{???}. But how
 the car's governor could be modified to allow it to race with or
 beside other cars is not mentioned, which is telling since it is the
 complexities of the road environment that make automated driving so difficult.
+
+\subsection{The Midcentury}
 
 By 1960, driverless vehicles had not been brought to market, but
 interest in the technology continued. Ford's vice president of
@@ -327,6 +333,8 @@ already have run head on into a wall,'' he wrote, and the answer to
 this problem was the lightning speed of cybernetic control.\cite{???} But real
 developments in automated driving did not materialize, and research
 languished throughout the late 1960s and 1970s.\cite{???}
+
+\subsection{Research at the Turn of the Century}
 
 In contrast to earlier radio or track-based electrical control, the
 ``modern'' era of self-driving vehicle research begins with
@@ -483,6 +491,8 @@ goal. Our assumptions about use have changed (with seemingly little
 investigation into why), but they continue to be the background of both
 optimistic and pessimistic viewpoints.
 
+\subsection{Short-term Promises}
+
 One popular vision of this technology is fundamentally optimistic: it
 puts forward the
 idea that these vehicles will be commercially available in as little
@@ -601,6 +611,7 @@ different social and cultural impacts.
 %% make the broader picture comprehensible?
 
 %TODO alter the end of this if the conclusion becomes two chapters
+\section{Overview}
 
 This thesis is organized around several key questions. First, what are
 the dominant narratives around self-driving vehicles and where do they
