--- a/main.bib
+++ b/main.bib
@@ -673,7 +673,8 @@
 }
 
 @ARTICLE{COJCosteja,
-   author = "Court of Justice of the European Union",
+   key = "Court of Justice of the European Union",
+   author = "",
    title = "{P}ress {R}elease {N}o. 70/14",
    year = 2014,
    publisher = "Luxembourg",
@@ -735,8 +736,10 @@
 }
 
 @UNPUBLISHED{ICO,
-   author = "Information Commissioner's Office",
-   title = "Summary of Costeja",
+   key = "Information Commissioner's Office",
+   author = "",
+   year = "2014",
+   title = "{S}ummary of {C}osteja",
    note = "https://iconewsblog.files.wordpress.com/2014/05/key-points-of-cjeu-case.pdf",
 }
 
@@ -792,12 +795,13 @@
 
 @ARTICLE{tomtommaps,
    author = "Jon Knox",
+   year = "Accessed 2015",
    title = "{R}eal-time maps are game changers",
    journal = "TOMTOM - Connected Car Report",
    note = "http://www.connectedcar.org.uk/tomtom/4584538397",
 }
 
-@ARTICLE{gigaom_harris,
+@ARTICLE{gigaomHarris,
    author = "Derrick Harris",
    title = "{T}he one-night stand, quantified and visualized by {U}ber",
    journal = "Gigaom",
@@ -806,7 +810,7 @@
    note = "https://gigaom.com/2012/03/26/uber-one-night-stands/",
 }
 
-@ARTICLE{venturebeat_obrien,
+@ARTICLE{venturebeatObrien,
    author = "Chris O'Brien",
    title = "{U}ber removed blog post from data science team that examined link between prostitution and rides",
    journal = "VentureBeat",
@@ -817,19 +821,10 @@
 
 @ARTICLE{vamors-p,
    author = "E. D. Dickmanns and R. Behringer and D. Dickmanns and T. Hildebrandt and M. Maurer and F. Thomanek and J. Schiehlen",
-   title = "{T}he {S}eeing {P}assenger {C}ar '{V}a{M}o{R}s-{P}'",
+   title = "{T}he {S}eeing {P}assenger {C}ar `{V}a{M}o{R}s-{P}'",
    journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
    year = 1994,
    pages = "68--73",
-}
-
-@ARTICLE{rainADAS,
-   author = "Aurelien Cord and Nicolas Gimonet",
-   title = "{D}etecting {U}nfocused {R}aindrops: {I]n-{V}ehicle {M}ultipurpose {C}ameras",
-   journal = "IEEE Robotics and Automation Magazine",
-   month = "March",
-   year = 2014,
-   pages = "49--56",
 }
 
 @ARTICLE{makingBertha,
@@ -838,7 +833,7 @@
    journal = "IEEE Spectrum",
    month = "August",
    year = 2014,
-   pages = "44-49",
+   pages = "44--49",
 }
 
 @ARTICLE{fukuda,
@@ -849,14 +844,6 @@
    pages = "1312--1317",
 }
 
-@INCOLLECTION{collisionPaper,
-   author = "Luke Fletcher and Seth Teller and Edwin Olson and David Moore and Yoshiaki Kuwata and Jonathan How and John Leonard and Isaac Miller and Mark Campbell and Dan Huttenlocher and Aaron Nathan and Frank-Robert Kline",
-   title = "{T}he {MIT}--{C}ornell {C}ollision and {W}hy it {H]appened",
-   booktitle = "The DARPA Urban Challenge",
-   publisher = "Springer Berlin / Heidelberg"
-   year = 2009,
-   pages = "509--548",
-}
 
 @UNPUBLISHED{volvovideo,
    author = "Volvo Cars",
@@ -888,7 +875,7 @@
    journal = "Popular Science",
    month = "January 30",
    year = 2015,
-   note = "http://www.popsci.com/bill-gates-fears-ai-ai-researchers-know-better?cmpid=currents"
+   note = "http://www.popsci.com/bill-gates-fears-ai-ai-researchers-know-better?cmpid=currents",
 }
 
 @ARTICLE{huntIntelligence,
@@ -897,7 +884,7 @@
    journal = "Psychology Today",
    month = "May 30",
    year = 2014,
-   note = "https://www.psychologytoday.com/blog/exploring-intelligence/201105/defining-intelligencestep-2"
+   note = "https://www.psychologytoday.com/blog/exploring-intelligence/201105/defining-intelligencestep-2",
 }
 
 @ARTICLE{ornstein,
@@ -906,7 +893,7 @@
    journal = "Bulletin of Atomic Scientists",
    month = "December",
    year = 1984,
-   pages = 11--15,
+   pages = "11--15",
 }
 
 @ARTICLE{merill,
@@ -915,7 +902,7 @@
    journal = "MakeUseOf",
    month = "December 10",
    year = 2014,
-   note = "http://www.makeuseof.com/tag/self-driving-cars-will-change-transportation-forever/"
+   note = "http://www.makeuseof.com/tag/self-driving-cars-will-change-transportation-forever/",
 }
 
 @BOOK{Collins,
@@ -932,21 +919,25 @@
    journal = "Electronic Frontier Foundatoin",
    month = "November 13",
    year = 2013,
-   note = "https://www.eff.org/deeplinks/2013/11/drm-cars-will-drive-consumers-crazy"
+   note = "https://www.eff.org/deeplinks/2013/11/drm-cars-will-drive-consumers-crazy",
 }
 
 @TECHREPORT{censusDeaths,
-   author = "U.S. Census Bureau",
+   key = "U.S. Census Bureau",
+   author = "",
    title = "Table 1103. Motor Vehicle Accidents--Number and Deaths: 1990 to 2009",
-   number = "Statistical Abstract of the United States: 2012"
+   number = "Statistical Abstract of the United States: 2012",
+   year = "2012",
    note = "Transportation, p. 693, https://www.census.gov/compendia/statab/2012/tables/12s1103.pdf",
 }
 
 @TECHREPORT{fhwa,
-   author = "Federal Highway Administration",
+   key = "Federal Highway Administration",
+   author = "",
+   year = "2013",
    title = "Table 1103. Motor Vehicle Accidents--Number and Deaths: 1990 to 2009",
-   number = "2013 Status of the Nation's Highways, Bridges, and Transit: Conditions \& Performance"
-   note = "Exhibit 1--5, http://www.fhwa.dot.gov/policy/2013cpr/chap1.htm#5",
+   number = "2013 Status of the Nation's Highways, Bridges, and Transit: Conditions \& Performance",
+   note = "Exhibit 1--5, http://www.fhwa.dot.gov/policy/2013cpr/chap1.htm\#5",
 }
 
 @ARTICLE{8truthsandmyths,
@@ -955,7 +946,7 @@
    journal = "Tech Republic",
    month = "September 15",
    year = 2014,
-   note = "http://www.techrepublic.com/article/8-truths-and-myths-of-driverless-cars/"
+   note = "http://www.techrepublic.com/article/8-truths-and-myths-of-driverless-cars/",
 }
 
 @ARTICLE{driverlessfuture,
@@ -973,8 +964,8 @@
    journal = "Injury Prevention",
    number = 4,
    year = 1998,
-   pages = 89--91,
-   note = "http://injuryprevention.bmj.com/content/4/2/89.full"
+   pages = "89--91",
+   note = "http://injuryprevention.bmj.com/content/4/2/89.full",
 }
 
 @TECHREPORT{SivakSchoettle,
@@ -1006,7 +997,7 @@
 
 @ARTICLE{templetonB,
    author = "Graham Templeton",
-   title = "{G}oogle's autonomous car gets a '{B}'in driving test: {N}ot great, but better than most of us",
+   title = "{G}oogle's autonomous car gets a `{B}'in driving test: {N}ot great, but better than most of us",
    journal = "ExtremeTech",
    month = "September 15",
    year = 2014,
@@ -1032,7 +1023,8 @@
 }
 
 @BOOK{NRCAutonomy,
-   author = "National Research Council",
+   key = "National Research Council",
+   author = "",
    title = "Autonomy Research for Civil Aviation: Toward a New Era of Flight",
    publisher = "The National Academies Press",
    address = "Washington, DC",
@@ -1057,7 +1049,8 @@
 }
 
 @TECHREPORT{PARCCAST,
-   author = "Flight Deck Automation Working Group",
+   key = "Flight Deck Automation Working Group",
+   author = "",
    title = "{O}perational {U}se of {F}light {P}ath {M}anagement {S}ystems",
    institution = "Performance-Based Aviation Rulemaking Committee",
    month = "September 5",
@@ -1070,11 +1063,13 @@
    journal = "Orlando Sentinel",
    month = "November 7",
    year = 1999,
-   note = "http://articles.orlandosentinel.com/1999-11-07/news/9911070029_1_plane-aviation-safety-type-of-accident",
+   note = "http://articles.orlandosentinel.com/1999-11-07/news/9911070029\_1\_plane-aviation-safety-type-of-accident",
 }
 
 @UNPUBLISHED{cast-safety.org,
-   author = "Commercial Aviation Safety Team",
+   key = "Commercial Aviation Safety Team",
+   author = "",
+   year = "Accessed 2015",
    title = "Fast Facts",
    note = "On the front page at http://cast-safety.org/",
 }
@@ -1095,7 +1090,7 @@
    number = "240",
    month = "June/July",
    year = 2010,
-   pages = 16--17,
+   pages = "16--17",
 }
 
 @ARTICLE{hoderParents,
@@ -1113,7 +1108,7 @@
    journal = "The New York Times",
    month = "September 25",
    year = 2013,
-   note = "http://www.nytimes.com/2013/09/26/fashion/moms-van-is-called-uber.html?_r=1",
+   note = "http://www.nytimes.com/2013/09/26/fashion/moms-van-is-called-uber.html?\_r=1",
 }
 
 @ARTICLE{miglioreWomen,
@@ -1124,6 +1119,28 @@
    year = 2014,
    note = "http://www.autoblog.com/2014/08/01/women-skeptical-self-driving-cars-more-than-men/",
 }
+
+@INCOLLECTION{collisionPaper,
+   author = "Luke Fletcher and Seth Teller and Edwin Olson and David Moore and Yoshiaki Kuwata and Jonathan How and John Leonard and Isaac Miller and Mark Campbell and Dan Huttenlocher and Aaron Nathan and Frank-Robert Kline",
+   title = "{T}he {MIT}--{C}ornell {C}ollision and {W}hy it {H}appened",
+   booktitle = "The DARPA Urban Challenge",
+   publisher = "Springer Berlin / Heidelberg",
+   year = 2009,
+   pages = "509--548",
+}
+
+@ARTICLE{rainADAS,
+   author = "Aurelien Cord and Nicolas Gimonet",
+   title = "{D}etecting {U}nfocused {R}aindrops: {I}n-{V}ehicle {M}ultipurpose {C}ameras",
+   journal = "IEEE Robotics and Automation Magazine",
+   month = "March",
+   year = 2014,
+   pages = "49--56",
+}
+
+
+
+
 
 
 
