last first-draft edits to ch concl, 4, 5

--- a/chap4.tex
+++ b/chap4.tex
@@ -1,4 +1,5 @@
 \chapter{Cyborgs and Chauffeurs}
+\label{app:a}
 
 %% Somewhere in here:
 %% bring in the qualitative observations of actually driving, the
@@ -37,11 +38,11 @@ Kline in 1960, as a descriptor for the alteration of human beings to
 cope with the conditions of outer space: they would be self-regulating
 \emph{cybernetic organisms}\cite[p. 66]{ekbia}. While the creation of
 such cyborg astronauts was never attempted outside of the imagination
-of science fiction writers, the astronauts were indeed fashioned into
+of science fiction writers, astronauts were indeed fashioned into
 cyborgs by their existence within suits and spacecraft with which they
 had to interface for their survival, and the cyborg idea has become a
 powerful cultural force. As Donna Haraway, one of the most recognized
-philosophers of cyborg culture (and a cyborg feminism), describes:
+philosophers of cyborg culture (and cyborg feminism), describes:
 ``Contemporary science 
 fiction is full of cyborgs---creatures simultaneously
 animal and machine, who populate worlds ambiguously natural and
@@ -64,7 +65,7 @@ Haraway's view is not altogether pessimistic, as she sees in the cyborg
 the potential site of a new epistemology that does not recognize or
 repeat Western binaries and cultural subjugation\cite[p.
   118-121]{???-haraway}. But while one can hardly mention cyborgs without
-mentioning Haraway, her's is no the vision I find most relevant for
+mentioning Haraway, hers is not the vision I find most relevant for
 understanding automated vehicles. Instead, I would like to consider philosopher Andy
 Clark's contention that humans are ``(disguised) \emph{natural-born}
 cyborgs''\cite[p. 66]{ekbia}. This idea is particularly compelling
