--- a/chap5.tex
+++ b/chap5.tex
@@ -1,4 +1,5 @@
 \chapter{New Epistemologies and Public Space}
+\label{app:b}
 
 Though the histories of the road and its relationship to the
 automobile are very much part of the background of this thesis, little
@@ -11,7 +12,7 @@ fashion.\footnote{This is not, however, to minimize the human
   streets, and some interesting research work has been done building
   machines that take them seriously. Of particular note is Nicholas
   Pennycooke's thesis on AEVITA\cite{???-aevita}. Negotiating street
-  space with unpredictable, and difficult-to-read, human beings a
+  space with unpredictable and difficult-to-read human beings is a
   major stumbling block for automated vehicles.} However, there was a
 time when city streets were not primarily the venue of the automobile,
 but were mixed-use areas where children played, vendors sold goods,
@@ -45,10 +46,10 @@ the killers, acts of public mourning memorialized the lost, and a
 national safety campaign began to attempt to reduce these
 deaths\cite[p. 23]{???-zelizer}. Public outrage cast automobiles as
 ``frivolous playthings'' or ``pleasure cars''\cite{???-vox}, magnified
-by the result in a transformation of the sentimental worth of
+by a transformation in the sentimental worth of
 children\cite[p. 23]{???-zelizer}. 
 
-This context for public space involved a potential radical change in
+This contest for public space involved a potentially radical change in
 the uses and meanings of the street. As Zelizer notes, the city street
 was formerly a playground for children, in part out of the necessity
 to find some space for play amid crowded tenements\cite[p.
@@ -85,7 +86,7 @@ the blame for traffic accidents to pedestrians; the AAA sponsored
 safety campaigns in schools; and police and citizens were called upon
 to shame transgressors in order to set new public standards---even the
 name for the infraction, ``jay-walking,'' was intended to create
-public approbrium for the supposed ``hicks'' who did not know how to
+public opprobrium for the supposed ``hicks'' who did not know how to
 behave in cities, and to shift blame to them \cite{???-vox}. This
 change in the way streets were utilized entailed a large societal
 shift motivated by a new technology, but it would be wrong to say it
@@ -106,7 +107,7 @@ asphalt manufacturers and other special interests who saw money to be made---cre
 very roads that bicycles then had to compete with cars for space on
 \cite{???-vox2}. Many of the primary riders who had succeeded in lobbying for
 the 1916 Federal Aid Road Act, however, switched over to pioneer the
-automobile as its popularity rose in the earth 20th century. Between
+automobile as its popularity rose in the early 20th century. Between
 the technologies of bicycle and automobile, the American roadway
 underwent a period of radical change that crystallized the system into
 something relatively close to its current form. These historical
@@ -120,8 +121,9 @@ designed to foster automobility.
 
 What is the new epistemology needed to make sense of devices like
 automated vehicles in their every-day existence? We are so far not
-used to encountering such devices outside of extreme environments,
-except in weak forms like cruise control and automated transmissions.
+used to encountering such devices
+except in weak forms such as cruise control and automated
+transmissions. How should we regard them?
 Automobiles were long subject to disputes over their nature: were they
 fundamentally safe vehicles misused by people, or fundamentally
 dangerous technologies that required careful licensing and use to
@@ -140,7 +142,7 @@ more insulated from pedestrians? Or will faster reaction times and
 always-attentive automated safety features foster tighter, mixed-use
 environments? (And additionally, as the concept of replacing traffic
 lights with a slots system, as described by Paolo Santi, should have
-as asking, which types and classes of users will the new environments
+us asking, which types and classes of users will the new environments
 and standards benefit? Will environments improve for those with access
 to technology, while being degraded for those without?) 
 
@@ -171,7 +173,7 @@ litigant to get expert witnesses to testify as to the apportionment of
 responsibility between human and machine, and the human tends to be
 scapegoated all too often in industrial accidents involving human
 supervisors interacting with automation.} 
-The question of what can we actually ask the human to do, and hold them to task
+The question of what we can actually ask the human to do, and hold them to task
 for, is a critical question both for automation system design and the
 legal handling of cases involving such automation.
 %% Sidenote: important to note that issues of litigation for full autonomy are
@@ -200,18 +202,19 @@ will change again, to accomodate new technologies, assuming sufficient
 social and economic pressure to catalyze that change. Technologies do
 not alone bring about those changes, but their presence, availability,
 and market viability provide incentives for groups to encourage broad
-social and infrastructural changes. The automated vehicle represents a
+social and infrastructural changes. The automated vehicle represents
 another possible nexus for change, but how the city will be re-shaped
 is an open question. Problematically, the automated car---like the
-``smart city'' which is already been critiqued in this
+``smart city'' which has already been critiqued in this
 way\cite{???}---presents the opportunity for successful technology
 companies to wrest greater control over everyday life, to worm their
 way more deeply into our existence and thereby make themselves
 indispensable. Automation can be a tool to enable one group of
 people---technologists running multinational organizations---at the
-expense of the rest of us.\footnote{This is at least a relatively clear and
-predictable corporate strategy. Opposing it will not be easy, but it
-should at least help to be clear that these are the stakes involved.}
+expense of the rest of us.\footnote{This is a relatively conventional and
+predictable corporate strategy. Opposing it will not be easy, of
+course, but it
+is at least helpful to be clear that these are the stakes involved.}
 But it also does not have to be employed toward those ideological
 ends; given sufficient willpower, it can be made to serve others.
 As I held in chapter \ref{chap:2}, changes to the city
