--- a/concl.tex
+++ b/concl.tex
@@ -9,7 +9,7 @@ of the ``self-driving'' vehicle, through an examination of what this
 might mean for our society, to an investigation of an alternative
 narrative and the real histories that support that narrative. What
 should be clear from this thesis, but which must be made clearer in the
-public discourse about increasingly-automated technologies, is that a
+public discourse about increasingly automated technologies, is that a
 movement from human systems, through hybrid systems, to fully
 autonomous systems autonomous is not inevitable. It is not a
 requirement of technological progress, or a fundamental fact about the
@@ -19,7 +19,7 @@ technology does not alone make full autonomy acceptable or viable,
 but presents a convenient cover story for the economic objectives of
 organizations involved in automating the car.\footnote{For more about
   how struggles about cities and transportation technologies have
-  panned out in the past, see appendix \ref{chap:5}.}
+  panned out in the past, see appendix \ref{app:b}.}
 
 \section{The Shape of Automation}
 
@@ -73,7 +73,7 @@ technological solutions to social problems, it is not fundamentally
 a failure. It is a societal choice to which engineering solutions
 should be pliable.
 
-Many examples of hybrid systems exist, and joint-cognitive systems
+Many examples of hybrid systems exist, and joint-cognitive-systems
 design presents an alternative way of looking at problems, and valuing
 human and machine contributions to their solution, that opens the way
 for other futures. And as we have seen, these approaches and
@@ -103,7 +103,8 @@ dreams of driverless cars and attendant approaches to system design.
 When we use factory automation, artificial intelligence, ``NASA
 engineering,'' or autopilot to frame ideas about self-driving
 vehicles, we carry forward certain ideas about these technologies that
-frame our vision, irrespective of actual historical developments. We risk
+narrow and constrain our vision, irrespective of actual historical
+developments. We risk 
 thinking about autopilots as a small step away from being full vehicle
 operators, rather than as tools used by vehicle operators to support
 their needs. We risk thinking about factory automation as a
@@ -188,14 +189,14 @@ tendency to avoid these complex questions. One popular and troubling
 argument revolves around responsibility for the rollout of
 self-driving systems. On the pro-side, commentators stress the many
 thousands who will die if self-driving systems are not implemented
-soon, using that as lever to argue for the moral imperative of
+soon, using that as a lever to argue for the moral imperative of
 speeding up their legalization and acceptance.\cite{???} On the con-side, in
 this interpretation, stand the risk-averse regulators: current deaths
 are obviously not on their hands, but if one child is killed by a
-``robot car'' they face public censure. But though this cartoon-like
+``robot car,'' they face public censure. But though this cartoon-like
 view of reality does have a media public face, it does not do justice
 to the complexity of the situation. The statistics about driverless
-cars and risk, though partly a function of mathematical modelling, are
+cars and risk, though partly a function of mathematical modeling, are
 also, fundamentally, matters of faith. No one has the precise answer.
 While we can point to the 90\% of accidents that involve human error,
 computers will fix some of these types of error but may also cause
@@ -208,12 +209,12 @@ the achievements of more radical approaches would need to be compared.
 Complex changes to complex, high-stakes systems produce unpredictable
 results. So how we implement automated vehicle technology is as much
 about narratives, the stories we believe and tell about technology, as
-much as it is about mathematics, and modelling the world. 
+much as it is about mathematics, and modeling the world. 
 
 Our choice should not be to either accept this driverless vision or take
 responsibility for the deaths of thousands. That viewpoint is abusive, coercive,
 and deeply wrong, and the future is too important to be left up to
-knee-jerk technoutopianism and blind ideology. This is not a question
+knee-jerk techno-utopianism and blind ideology. This is not a question
 of whether fully automated cars can come to exist, even as they are
 now envisioned. I am not saying that the science-fiction dreams of
 driverless vehicles are possible or impossible, and I believe in the
@@ -249,9 +250,10 @@ or ``save more lives''?\footnote{These are deep and subtle questions,
   These two basic premises, extrapolated out to their logical
   conclusions, may diverge rather than converge, in ways that remind
   us of the dystopic potential of quantification and optimization,
-  which can lead to solutions that are fundamentally inhumane. It would be foolish
+  which can lead to solutions that are fundamentally inhumane. It
+  would be foolish 
   to assume that medical systems, themselves a collection of
-  technologies and people, are not affected by this kinds of distinctions.} There may be hidden consequences to these
+  technologies and people, are not affected by these kinds of distinctions.} There may be hidden consequences to these
 philosophies---who is saved? and how? and who bears the cost, or is
 counted out in order to save the greater number?---that come to deeply
 affect how systems engineered from these alter the world.
@@ -340,13 +342,15 @@ These considerations may well imply we need to maintain significant
 human involvement in order to mitigate risk, achieve public
 acceptance, and address the human goals that drive technological
 development. Rather than ``to automate or not to automate,'' we ask
-``how and why do we automate?'' But even in the most automated technologies, their
+``how and why do we automate?'' But even in the most automated
+technologies, their 
 autonomy is largely an artifact of the lens through which we engage
 with them---these systems involve delicate dances of human and machine
 components, dispersed through time and space, and only pushed to the
 margins of a point of view that takes the technological object itself,
 not its sociopolitical and cognitive contexts, as the object of study.
-Recognizing that continued human involvement will occur as a matter of principle is
+Recognizing that continued human involvement will occur as a matter of
+principle is 
 the most important first step we can take toward rebalancing the
 narrative of automation toward something more productive, which takes
 seriously the technological hybridity of our past, present and future.
